--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,14 @@
 {{!-- The following component displays Ember's default welcome message. --}}
 {{!welcome-page--}}
 {{!-- Feel free to remove this! --}}
-<h3>My Meeting app</h3>
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo">
+            {{#link-to 'login'}}
+                My Match App
+            {{/link-to}}
+        </a>
+    </div>
+</nav>
+
 {{outlet}}
