--- a/app/templates/index-manager.hbs
+++ b/app/templates/index-manager.hbs
@@ -1,22 +1,39 @@
-{{!--outlet--}}
-<h4>Bienvenido, Manager</h4>
+{{!--Menu--}}
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Manager</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a{{action 'cerrarSesion'}}>Cerrar Sesión</a></li>
+        </ul>
+    </div>
+</nav>
 
 <nav>
     <div class="nav-wrapper">
         <a class="brand-logo right">Logo</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li>
-                {{#link-to 'team'}}
+                {{#link-to 'index-manager'}}
+                    Inicio
+                {{/link-to}}
+            </li>
+            <li>
+                {{#link-to 'index-manager.equipo'}}
                     Equipo
                 {{/link-to}}
             </li>
             <li>
-                {{#link-to 'login'}}
+                {{#link-to 'index-manager.encuentros'}}
                    Encuentros
                 {{/link-to}}
             </li>
             <li>
-                {{#link-to 'signup'}}
+                {{#link-to 'index-manager.miembros'}}
+                    Miembros
+                {{/link-to}}
+            </li>
+             <li>
+                {{#link-to 'index-manager.publicaciones'}}
                     Publicaciones
                 {{/link-to}}
             </li>
@@ -24,18 +41,6 @@
     </div>
 </nav>
 
-<div class="row">
-    <div class="col s1"> </div>
-    <div class="parallax-container col s10">
-        <div class="parallax">
-            <img src="https://media-exp2.licdn.com/mpr/mpr/AAEAAQAAAAAAAAaRAAAAJDg1NWJlNzgwLTc1MjgtNGU1MS05YmYwLWJlY2NiM2Q1OTg0Ng.jpg">
-        </div>
-    </div>
-</div>
+{{outlet}}
 
-<script>
-    $(document).ready(function(){
-      $('.parallax').parallax();
-    });
-</script>
-        
+<!--footer-->
