--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,5 +1,17 @@
 {{!--outlet--}}
-<h4>Página de Inicio</h4>
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Iniciar Sesión</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li>
+                {{#link-to 'signup'}}
+                    Crear cuenta
+                {{/link-to}}
+
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <div class="row">
   <form class="col s12">
