--- a/app/templates/signup.hbs
+++ b/app/templates/signup.hbs
@@ -1,5 +1,17 @@
 {{!--outlet--}}
-<h4>Formulario de registro</h4>
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Registro de Usuario</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li>
+                {{#link-to 'login'}}
+                    Iniciar Sesión
+                {{/link-to}}
+
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <div class="row">
     <form class="col s12">
@@ -28,12 +40,12 @@
             </div>
         </div>
 
-        <div class="row">
+        <!--div class="row">
             <div class="input-field col s12">
-                {{input disabled="No" value="No disponible" id="disabled" type="text" class="validate"}}
+                {{input disabled="No" value="No disponible" id="disabled" type="text" class="validate" value=cveAdmin}}
                 <label for="disabled">Clave de Administrador</label>
             </div>
-        </div>
+        </div-->
 
         <div class="row">
             <button {{action 'registroUsuario'}} class="btn waves-effect waves-light" type="submit" name="action">Regístrate   
